--- a/graphql/package.json
+++ b/graphql/package.json
@@ -19,8 +19,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "graphql": "^16.8.1",
-    "graphql-yoga": "^5.2.0",
+    "graphql-http": "^1.22.0",
     "helmet": "^7.1.0",
-    "mongoose": "^8.2.2"
+    "mongoose": "^8.2.2",
+    "ruru": "^2.0.0-beta.11"
   }
 }
